# neat

./: .gitignore  Application.hs  Foundation.hs  Import.hs  Model.hs  README.md  Settings.hs  install.sh  neat.cabal  stack.yaml
Handler/: Home.hs  Item.hs  LostOrders.hs  Orders.hs  Problematic.hs  ProfitItems.hs  Register.hs  Settings.hs  Stock.hs  Update.hs  Wallet.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
static/css/: neat.css
static/js/: neat.js
templates/: curStock.hamlet  curStock.julius  default-layout-wrapper.hamlet  default-layout.lucius  item.hamlet  item.julius  login-layout-wrapper.hamlet  settings.hamlet  settings.lucius  wallet.hamlet  wallet.julius
test/Handler/: ItemSpec.hs  LostOrdersSpec.hs  OrdersSpec.hs  ProblematicSpec.hs  ProfitItemsSpec.hs  StockSpec.hs  UpdateSpec.hs
